--- a/cheatsheets-book/_config.yml
+++ b/cheatsheets-book/_config.yml
@@ -1,9 +1,9 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
-logo: logo.png
+title: Cheatsheets
+author: X. Anh Do
+#logo: logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -30,3 +30,15 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+# Add enable parsing LaTeX-style math blocks with the amsmath MyST extension
+#parse:
+#  myst_enable_extensions:
+#    # don't forget to list any other extensions you want enabled,
+#    # including those that are enabled by default!
+#    - amsmath
+
+# Use mathjax version 3
+sphinx:
+  config:
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
