--- a/cheatsheets-book/_toc.yml
+++ b/cheatsheets-book/_toc.yml
@@ -3,8 +3,8 @@
 format: jb-book
 root: content/intro
 chapters:
-- file: content/pandas.md
-- file: content/git.md
-- file: content/pyspark.md
+- file: content/pandas
+- file: content/docker
+- file: content/git
+- file: content/pyspark
 - file: content/bash
-
