--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,6 +4,7 @@ format: jb-book
 root: content/markdown/intro
 chapters:
 - file: content/markdown/casi_1
+- file: content/markdown/bibliography
 #- file: content/notebook/pandas
 - file: content/markdown/docker
 - file: content/markdown/git
