--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Build HTML page
         run: make htmlbook
 
+      - name: Update docs dir
+        run: make updatedocs
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
