--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -6,6 +6,7 @@ chapters:
 - file: content/markdown/casi_1
 - file: content/markdown/bibliography
 #- file: content/notebook/pandas
+- file: content/markdown/conda
 - file: content/markdown/docker
 - file: content/markdown/git
 - file: content/markdown/github
